cabal-version: 2.2

name:           harg
version:        0.1.0.0
synopsis:       Haskell program configuration from multiple sources
description:    Please see the README on GitHub at <https://github.com/alexpeits/harg#readme>
homepage:       https://github.com/alexpeits/harg
bug-reports:    https://github.com/alexpeits/harg/issues
author:         Alex Peitsinis
maintainer:     alexpeitsinis@gmail.com
copyright:      Copyright (c) 2019 Alex Peitsinis
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
category:       System, CLI, Options, Parsing
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/alexpeits/harg

library
  exposed-modules:    Options.Harg
  other-modules:      Options.Harg.Cmdline
                      Options.Harg.Construct
                      Options.Harg.Help
                      Options.Harg.Het.All
                      Options.Harg.Het.HList
                      Options.Harg.Het.Nat
                      Options.Harg.Het.Prod
                      Options.Harg.Het.Proofs
                      Options.Harg.Het.Variant
                      Options.Harg.Nested
                      Options.Harg.Operations
                      Options.Harg.Pretty
                      Options.Harg.Single
                      Options.Harg.Sources
                      Options.Harg.Sources.Env
                      Options.Harg.Sources.JSON
                      Options.Harg.Sources.NoSource
                      Options.Harg.Sources.Types
                      Options.Harg.Sources.YAML
                      Options.Harg.Subcommands
                      Options.Harg.Types
                      Options.Harg.Util
  hs-source-dirs:     src
  default-extensions: DataKinds
                      FlexibleContexts
                      FlexibleInstances
                      GADTs
                      KindSignatures
                      LambdaCase
                      MultiParamTypeClasses
                      RecordWildCards
                      ScopedTypeVariables
                      TypeApplications
                      TypeOperators
  ghc-options:        -Wall
                      -Wno-unticked-promoted-constructors
  build-depends:      base >=4.7 && <5
                    , barbies >= 1.0.0 && < 1.2
                    , aeson >= 1.4.2 && < 1.5
                    , bytestring >= 0.10.8 && < 0.11
                    , directory >= 1.3.3 && < 1.4
                    , higgledy >= 0.2.0 && < 0.3
                    , text >= 1.2.3 && < 1.3
                    , yaml >= 0.11.0 && < 0.12
                    , optparse-applicative >= 0.14.3 && < 0.15
  default-language:   Haskell2010

test-suite harg-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  ghc-options:      -Wall
                    -Wno-unticked-promoted-constructors
                    -threaded
                    -rtsopts
                    -with-rtsopts=-N
  build-depends:    base
                  , harg
  default-language: Haskell2010

test-suite readme-test
  type:               exitcode-stdio-1.0
  main-is:            README.lhs
  ghc-options:        -Wall
                      -Wno-unticked-promoted-constructors
                      -threaded
                      -Wall
                      -fno-warn-name-shadowing
                      -fno-warn-missing-signatures
                      -fno-warn-unused-top-binds
                      -fno-warn-type-defaults
                      -pgmL markdown-unlit
  build-depends:      base
                    , barbies
                    , higgledy
                    , optparse-applicative
                    , harg
  build-tool-depends: markdown-unlit:markdown-unlit
  default-language:   Haskell2010
